# cumulAnael

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: config.py  main.py
api/routes/: suivi_mun.py
api/services/: suivi_mun_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChartErrorBoundary.tsx  ChartSkeleton.tsx  Dashboard.tsx  DeputePhoto.tsx  HemicycleChart.tsx  ProfileCard.tsx  SankeyVisxChart.tsx  StatsPanel.tsx
frontend/lib/: nuanceColors.ts
scripts/: load_suivi_mun.py
seed/: ._Cumul_2020_2026.xlsx  Cumul_2020_2026.xlsx
