[project]
name = "cumulanael"
version = "0.1.0"
description = "Analyse du cumul des mandats et des démissions — Municipales 2020 & 2026"
requires-python = ">=3.12.0"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.2.1",
]
